5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1602_825.log
== TEST (2019-03-28 01:19:12) 
-- CODE:
import math
pi
print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:37:31) 
-- CODE:
from math import*
print(pi)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:37:49) 
-- CODE:
from math import*
print(round(pi, 3)
-- ERROR:
File "XXXX", line 3
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:38:00) 
-- CODE:
from math import*
print(float(round(pi, 3)
-- ERROR:
File "XXXX", line 3
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:38:09) 
-- CODE:
from math import*
print(float(round(pi, 3)))
-- OUTPUT:
3.142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:39:30) 
-- CODE:
from math import*
input(float("raio: "))
print(raio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(float("raio: "))
ValueError: could not convert string to float: 'raio: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:39:49) 
-- CODE:
from math import*
int(input(float("raio: ")))
print(raio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int(input(float("raio: ")))
ValueError: could not convert string to float: 'raio: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:40:19) 
-- CODE:
from math import*
float(input("raio: "))
print(raio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(raio)
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:40:48) 
-- CODE:
from math import*
r = float(input("raio: "))
print(r)
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:47:47) 
-- CODE:
from math import*
r = float(input("raio: "))
print("area igual a: "(pi*(r**2))
-- ERROR:
File "XXXX", line 4
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:48:09) 
-- CODE:
from math import*
r = float(input("raio: "))
print((pi*(r**2))
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:48:20) 
-- CODE:
from math import*
r = float(input("raio: "))
A= (pi*(r**2))
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:48:50) 
-- CODE:
from math import*
r = float(input("raio: "))
A= (pi*(r**2))
print(float(round(A, 3)))
-- OUTPUT:
63.617
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:49:09) 
-- CODE:
from math import*
r = float(input("raio: "))
A= (pi*(r**2))
print("area igual a: "float(round(A, 3)))
-- ERROR:
File "XXXX", line 4
    print("area igual a: "float(round(A, 3)))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:49:21) 
-- CODE:
from math import*
r = float(input("raio: "))
A= (pi*(r**2))
print("area igual a:"(float(round(A, 3)))
-- ERROR:
File "XXXX", line 5
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:49:29) 
-- CODE:
from math import*
r = float(input("raio: "))
A= (pi*(r**2))
print("area igual a:")float(round(A, 3)))
-- ERROR:
File "XXXX", line 4
    print("area igual a:")float(round(A, 3)))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:54:32) 
-- CODE:
from math import*
r = float(input("raio: "))
A = (pi*(r**2))
print(float(round(A, 3)))
a = (4/3*(pi*(r**3)))
print(float(round(a, 3)))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:54:52) 
-- CODE:
from math import*
r = float(input("raio: "))
A = (pi*(r**2))
print(float(round(A, 3)))
a = (4/3*(pi*(r**3)))
print(float(round(a, 3)))
-- EXECUTION TIME:
0.215269
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
